<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/archiveMonth"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:textColor="@color/colorDark"/>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:text="@string/archiveSee"
        android:id="@+id/button9"
        android:background="@color/colorAccent"
        android:textColor="@color/colorDark"
        android:layout_marginStart="31dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignTop="@+id/button10" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/archiveSend"
        android:id="@+id/button10"
        android:background="@color/colorAccent"
        android:textColor="@color/colorDark"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button9"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/archiveRemove"
        android:id="@+id/button8"
        android:background="@color/colorAccent"
        android:textColor="@color/colorDark"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/button10"
        android:layout_marginTop="10dp"/>

</RelativeLayout>